--- a/index.html
+++ b/index.html
@@ -149,11 +149,30 @@
 	</main>
   </body>
   <footer>
+	<img src="imgs/logo.png" alt="logo">
+	<div class="right">
+		<p><strong>Digital Ethics Across Europe (DEAE) </strong>is an end-of-course project for the exam <em>Open Access and Digital Ethics</em>, held by Prof Palmirani at University of Bologna in a.y. 2022/2023</p>
+		<p>The project was carried out by Valentina Bertelli, Giorgia Umana ADD</p>
+		<div class="links">
+			<a href="aboutus.html">About Us</a>
+			<a href="documentation.html">Documentation</a>
+			<a href="disclamer.html">Disclaimer</a>
+			
+		</div>
+		<div class="social">
+			
+			<a href="https://github.com/House-Of-Design/HouseOfDesign">Github</a>
+		</div>
+		
+	</div>
+   </footer>
+ 
+	
 	<script src="thejs.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  </footer>
+ 
 </html>
 
 
