--- a/index.html
+++ b/index.html
@@ -146,6 +146,21 @@
 			</div>
 		</div>
 
+		<div class="content" id="sixthsection">
+			<h2>About Us</h2>
+			<p> We are a passionate team of digital innovators and advocates, dedicated to exploring the intersections
+				of technology, ethics, and social equality. Our focus is on leveraging data to uncover systemic
+				disparities, highlight issues of inclusivity, and drive meaningful change. Together, we aim to
+				foster a deeper understanding of the challenges faced by LGBTQ+ communities across Europe</p>
+			<p><B>Giorgia Umana -</B></p>
+			<p><B>valentina Bertelli -</B></p>
+			<p><B>Alisha Carol Hiscox -</B></p>
+			<p><B>Lukas Firantas -</B></p>
+			
+			<p> Together, we are united by a shared mission: to use the power of open data and ethical research to shed light on the
+				inequalities faced by marginalized communities and  potentially contribute to building a more equitable digital and social landscape.</p>
+		</div>
+
 	</main>
   </body>
   <footer>
