--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>try</title>
+    <title>DEAE</title>
 
-  
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 	<!--bootstrap-->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	
 
@@ -132,6 +134,227 @@
 					<h3>Legal Analysis</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
 					</p>
+					<div class="accordion" id="accordionExample">
+						<div class="accordion-item">
+						  <h2 class="accordion-header" id="headingOne">
+							<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+								Privacy issues
+							</button>
+						  </h2>
+						  <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+							<div class="accordion-body" style="overflow-x:auto;">
+							  <table>
+								<tr>
+									<th></th>
+									<td><strong>Discrimination in the EU</strong></td>
+									<td><strong>EU LGBTIQ Survey III</strong></td>
+									<td><strong>Rainbow Europe</strong></td>
+									<td><strong>Laws And Families</strong></td>
+								</tr>
+								<tr>
+									<th>Is the dataset free of any personal data as defined in the Regulation (EU) 2016/679?</th>
+									<td><i class="fa fa-check" style="font-size:36px; color:green; "></i></td>
+									<td><i class="fa fa-check" style="font-size:36px; color:green"></i></td>
+									<td><i class="fa fa-check" style="font-size:36px; color:green"></i></td>
+									<td><i class="fa fa-check" style="font-size:36px; color:green"></i></td>
+								</tr>
+								<tr>
+									<th>Is the dataset free of any indirect personal data that could be used for identifying the natural person?
+									</th>
+									<td><i class="fa fa-check" style="font-size:36px; color:green"></i></td>
+									<td><i class="fa fa-check" style="font-size:36px; color:green"></i></td>
+									<td><i class="fa fa-check" style="font-size:36px; color:green"></i></td>
+									<td><i class="fa fa-check" style="font-size:36px; color:green"></i></td>
+								</tr>
+								<tr>
+									<th>If so, is there a law that authorize the PA to release them? Or any other legal basis?</th>
+									<td>Personal data is not released, detailed information is only available in the national agency if controls are necessary</td>
+									<td>Personal data can be released with consent</td>
+									<td>No personal data is collected</td>
+									<td>No personal data is collected</td>
+								</tr>
+								<tr>
+									<th>Is the dataset free of any particular personal data (art. 9 GDPR)?</th>
+									<td>Information about sexual orientation, gender identity, ethnic origin, age, religion, disability and socio-economic situation are present but not directly linked to specific individuals</td>
+									<td>The dataset contains information about people's sexual orientation and gender identity, but the data is presented in a way that prevents it from being linked back to a specific individual.</td>
+									<td>No personal data is collected</td>
+									<td>No personal data is collected</td>
+								</tr>
+								<tr>
+									<th>If so is there a law that authorize the PA to release them?</th>
+									<td>Personal data is not released. Detailed information is only available in the national agency if controls are necessary</td>
+									<td>Personal data can be released if the applicant consents to it.</td>
+									<td>No personal data is collected</td>
+									<td>No personal data is collected</td>
+								</tr>
+								<tr>
+									<th>Is the dataset free of any information that combined with
+										common data available in the web, could identify the person?
+										</th>
+										<td><i class="fa fa-check" style="font-size:36px; color:green"></i></td>
+										<td><i class="fa fa-check" style="font-size:36px; color:green"></i></td>
+										<td><i class="fa fa-check" style="font-size:36px; color:green"></i></td>
+										<td><i class="fa fa-check" style="font-size:36px; color:green"></i></td>
+								</tr>
+								<tr>
+									<th>If so, is there a law that authorize the PA to release them? Or any other legal basis?</th>
+									<td>Personal data is not released. Detailed information is only available in the national agency if controls are necessary</td>
+									<td>Personal data can be released if the applicant consents to it.</td>
+									<td>No personal data is collected</td>
+									<td>No personal data is collected</td>
+								</tr>
+								<tr>
+									<th>If so is there a law that authorize the PA to release them?</th>
+									<td><i class="fa fa-check" style="font-size:36px; color:green"></i></td>
+									<td><i class="fa fa-check" style="font-size:36px; color:green"></i></td>
+									<td><i class="fa fa-check" style="font-size:36px; color:green"></i></td>
+									<td><i class="fa fa-check" style="font-size:36px; color:green"></i></td>
+								</tr>
+								<tr>
+									<th>Is the dataset free of any information related to human rights
+										(e.g. refugees, witness protection, etc.)? </th>
+									<td><i class="fa fa-check" style="font-size:36px; color:green"></i></td>
+									<td><i class="fa fa-check" style="font-size:36px; color:green"></i></td>
+									<td><i class="fa fa-check" style="font-size:36px; color:green"></i></td>
+									<td><i class="fa fa-check" style="font-size:36px; color:green"></i></td>
+								</tr>
+								<tr>
+									<th>Do you use a tool for calculating the range of the risk of deanonymization?</th>
+									<td style="font-size:27px;">&#10060;</td>
+									<td style="font-size:27px;">&#10060;</td>
+									<td style="font-size:27px;">&#10060;</td>
+									<td style="font-size:27px;">&#10060;</td>
+								</tr>
+								<tr>
+									<th>Do you anonymize the dataset? With which technique?</th>
+									<td>Use of random sampling and structured data collection, aggregation of data into percentages</td>
+									<td>Aggregation of data into percentages. </td>
+									<td>There's no direct need for anonymization methods as no personal data is collected</td>
+									<td>There's no direct need for anonymization methods as no personal data is collected</td>
+								</tr>
+								<tr>
+									<th>Did you check the three mandatory parameters: singling out, linking out, inference out?</th>
+									<td></td>
+									<td></td>
+									<td>Not applicable</td>
+									<td></td>
+								</tr>
+								<tr>
+									<th></th>
+									<td></td>
+									<td></td>
+									<td></td>
+									<td></td>
+								</tr>
+								<tr>
+									<th></th>
+									<td></td>
+									<td></td>
+									<td></td>
+									<td></td>
+								</tr>
+								<tr>
+									<th></th>
+									<td></td>
+									<td></td>
+									<td></td>
+									<td></td>
+								</tr>
+								<tr>
+									<th></th>
+									<td></td>
+									<td></td>
+									<td></td>
+									<td></td>
+								</tr>
+								<tr>
+									<th></th>
+									<td></td>
+									<td></td>
+									<td></td>
+									<td></td>
+								</tr>
+
+							  </table>
+							</div>
+						  </div>
+						</div>
+						<div class="accordion-item">
+						  <h2 class="accordion-header" id="headingTwo">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+								IPR of the
+								dataset
+							</button>
+						  </h2>
+						  <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+							<div class="accordion-body">
+							  <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+							</div>
+						  </div>
+						</div>
+						<div class="accordion-item">
+						  <h2 class="accordion-header" id="headingThree">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+								Licences
+							</button>
+						  </h2>
+						  <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+							<div class="accordion-body">
+							  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+							</div>
+						  </div>
+						</div>
+						<div class="accordion-item">
+							<h2 class="accordion-header" id="headingFour">
+							  <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
+								  Privacy issues
+							  </button>
+							</h2>
+							<div id="collapseFour" class="accordion-collapse collapse show" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+							  <div class="accordion-body">
+								<strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+							  </div>
+							</div>
+						  </div>
+					  </div>
+					  <div class="accordion-item">
+							<h2 class="accordion-header" id="headingFive">
+							  <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="true" aria-controls="collapseFive">
+								Economical Conditions
+							  </button>
+							</h2>
+							<div id="collapseFive" class="accordion-collapse collapse show" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
+							  <div class="accordion-body">
+								
+							  </div>
+							</div>
+						  </div>
+					  </div>
+					  <div class="accordion-item">
+							<h2 class="accordion-header" id="headingSix">
+							  <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="true" aria-controls="collapseSix">
+								Temporary aspects 
+							  </button>
+							</h2>
+							<div id="collapseSix" class="accordion-collapse collapse show" aria-labelledby="headingSix" data-bs-parent="#accordionExample">
+							  <div class="accordion-body">
+								<table>
+									<tr>
+										<th>Do you check that the dataset concerns your institutional competences, scope and finality?</th>		
+										<td></td>
+									</tr>
+									
+									<th>Do you check if the dataset concerns other public administration competences?</th>
+									<th>Do you check the limitations for the publication stated by your national legislation or by the EU directives?</th>
+									<th>Do you check if there are some limitations connected to the international relations, public security or national defence?</th>
+									<th>Do you check if there are some limitations concerning the public interest?</th>
+									<th>Do you check the international law limitations?</th>
+									<th>Do you check the INSPIRE law limitations for the spatial data?</th>
+								</table>
+							  </div>
+							</div>
+						  </div>
+					  </div>
 				</div>
 				<div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
 					<h3>Ethics Analysis</h3>
@@ -153,7 +376,7 @@
 				disparities, highlight issues of inclusivity, and drive meaningful change. Together, we aim to
 				foster a deeper understanding of the challenges faced by LGBTQ+ communities across Europe</p>
 			<p><B>Giorgia Umana -</B></p>
-			<p><B>valentina Bertelli -</B></p>
+			<p><B>Valentina Bertelli -</B></p>
 			<p><B>Alisha Carol Hiscox -</B></p>
 			<p><B>Lukas Firantas -</B></p>
 			
