--- a/index.html
+++ b/index.html
@@ -153,18 +153,18 @@
 								</tr>
 								<tr>
 									<th>Is the dataset free of any personal data as defined in the Regulation (EU) 2016/679?</th>
-									<td><i class="fa fa-check" style="font-size:36px; color:green; "></i></td>
-									<td><i class="fa fa-check" style="font-size:36px; color:green"></i></td>
-									<td><i class="fa fa-check" style="font-size:36px; color:green"></i></td>
-									<td><i class="fa fa-check" style="font-size:36px; color:green"></i></td>
+									<td><i class="fa fa-check"></i></td>
+									<td><i class="fa fa-check"></i></td>
+									<td><i class="fa fa-check"></i></td>
+									<td><i class="fa fa-check"></i></td>
 								</tr>
 								<tr>
 									<th>Is the dataset free of any indirect personal data that could be used for identifying the natural person?
 									</th>
-									<td><i class="fa fa-check" style="font-size:36px; color:green"></i></td>
-									<td><i class="fa fa-check" style="font-size:36px; color:green"></i></td>
-									<td><i class="fa fa-check" style="font-size:36px; color:green"></i></td>
-									<td><i class="fa fa-check" style="font-size:36px; color:green"></i></td>
+									<td><i class="fa fa-check"></i></td>
+									<td><i class="fa fa-check"></i></td>
+									<td><i class="fa fa-check"></i></td>
+									<td><i class="fa fa-check"></i></td>
 								</tr>
 								<tr>
 									<th>If so, is there a law that authorize the PA to release them? Or any other legal basis?</th>
@@ -191,10 +191,10 @@
 									<th>Is the dataset free of any information that combined with
 										common data available in the web, could identify the person?
 										</th>
-										<td><i class="fa fa-check" style="font-size:36px; color:green"></i></td>
-										<td><i class="fa fa-check" style="font-size:36px; color:green"></i></td>
-										<td><i class="fa fa-check" style="font-size:36px; color:green"></i></td>
-										<td><i class="fa fa-check" style="font-size:36px; color:green"></i></td>
+										<td><i class="fa fa-check"></i></td>
+									    <td><i class="fa fa-check"></i></td>
+									    <td><i class="fa fa-check"></i></td>
+									    <td><i class="fa fa-check"></i></td>
 								</tr>
 								<tr>
 									<th>If so, is there a law that authorize the PA to release them? Or any other legal basis?</th>
@@ -205,25 +205,25 @@
 								</tr>
 								<tr>
 									<th>If so is there a law that authorize the PA to release them?</th>
-									<td><i class="fa fa-check" style="font-size:36px; color:green"></i></td>
-									<td><i class="fa fa-check" style="font-size:36px; color:green"></i></td>
-									<td><i class="fa fa-check" style="font-size:36px; color:green"></i></td>
-									<td><i class="fa fa-check" style="font-size:36px; color:green"></i></td>
+									<td><i class="fa fa-check"></i></td>
+									<td><i class="fa fa-check"></i></td>
+									<td><i class="fa fa-check"></i></td>
+									<td><i class="fa fa-check"></i></td>
 								</tr>
 								<tr>
 									<th>Is the dataset free of any information related to human rights
 										(e.g. refugees, witness protection, etc.)? </th>
-									<td><i class="fa fa-check" style="font-size:36px; color:green"></i></td>
-									<td><i class="fa fa-check" style="font-size:36px; color:green"></i></td>
-									<td><i class="fa fa-check" style="font-size:36px; color:green"></i></td>
-									<td><i class="fa fa-check" style="font-size:36px; color:green"></i></td>
+										<td><i class="fa fa-check"></i></td>
+										<td><i class="fa fa-check"></i></td>
+										<td><i class="fa fa-check"></i></td>
+										<td><i class="fa fa-check"></i></td>
 								</tr>
 								<tr>
 									<th>Do you use a tool for calculating the range of the risk of deanonymization?</th>
-									<td style="font-size:27px;">&#10060;</td>
-									<td style="font-size:27px;">&#10060;</td>
-									<td style="font-size:27px;">&#10060;</td>
-									<td style="font-size:27px;">&#10060;</td>
+									<td class="x">&#10060;</td>
+									<td class="x">&#10060;</td>
+									<td class="x">&#10060;</td>
+									<td class="x">&#10060;</td>
 								</tr>
 								<tr>
 									<th>Do you anonymize the dataset? With which technique?</th>
@@ -234,47 +234,55 @@
 								</tr>
 								<tr>
 									<th>Did you check the three mandatory parameters: singling out, linking out, inference out?</th>
-									<td></td>
-									<td></td>
+									<td><i class="fa fa-check"></i></td>
+									<td><i class="fa fa-check"></i></td>
 									<td>Not applicable</td>
-									<td></td>
+									<td class="x">&#10060;</td>
 								</tr>
 								<tr>
-									<th></th>
+									<th>Did you check that the open data platform respect all the privacy regulations (registration of the end-user, profiling, cookies, analytics, etc.)?</th>
+									<td><i class="fa fa-check"></i></td>
+									<td><i class="fa fa-check"></i></td>
 									<td></td>
-									<td></td>
-									<td></td>
-									<td></td>
+									<td><i class="fa fa-check"></i></td>
 								</tr>
 								<tr>
-									<th></th>
-									<td></td>
-									<td></td>
-									<td></td>
-									<td></td>
-								</tr>
-								<tr>
-									<th></th>
-									<td></td>
-									<td></td>
+									<th>Do you know who are in your open data platform the
+										Controller and Processor of the privacy data of the system?</th>
+									<td>European Commission serves as the Controller, and subcontracted organizations like Kantar Public act as Processors</td>
+									<td><i class="fa fa-check"></i></td>
 									<td></td>
 									<td></td>
 								</tr>
 								<tr>
-									<th></th>
-									<td></td>
-									<td></td>
-									<td></td>
+									<th>Where the datasets are physically stored (country and jurisdiction)? </th>
+									<td>European Union</td>
+									<td>European Union</td>
+									<td>European Union</td>
 									<td></td>
 								</tr>
 								<tr>
-									<th></th>
+									<th>Do you have a cloud computing platform?</th>
+									<td>The European Commission utilizes cloud computing platforms for various data storage and processing needs. It is unclear if cloud computing platforms are used for this specific database</td>
+									<td class="x">&#10060;</td>
 									<td></td>
-									<td></td>
-									<td></td>
-									<td></td>
+									<td class="x">&#10060;</td>
 								</tr>
-
+								<tr>
+									<th>Have checked the privacy regulation of the country where
+										the dataset are physically stored? (territoriality)</th>
+									<td>The European Commission ensures that all datasets are stored in locations where privacy regulations are compatible with GDPR</td>
+									<td>The dataset follows EU privacy regulations</td>
+									<td></td>
+									<td class="x">&#10060;</td>
+								</tr>
+								<tr>
+									<th>Do you have non-personal data? Are you sure that are not “mixed data”?</th>
+									<td>The Eurobarometer datasets released to the public are primarily anonymized and aggregated to ensure that no personal data is included. </td>
+									<td></td>
+									<td><i class="fa fa-check"></i></td>
+									<td><i class="fa fa-check"></i></td>
+								</tr>
 							  </table>
 							</div>
 						  </div>
@@ -288,7 +296,51 @@
 						  </h2>
 						  <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
-							  <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+							  <table>
+								<tr>
+									<th></th>
+									<td><strong>Discrimination in the EU</strong></td>
+									<td><strong>EU LGBTIQ Survey III</strong></td>
+									<td><strong>Rainbow Europe</strong></td>
+									<td><strong>Laws And Families</strong></td>
+								</tr>
+								<tr>
+									<th>Do you have created and generated the dataset?</th>
+									<td>The survey used to create the dataset was conducted by Kantar on behalf of Kantar Belgium</td>
+									<td class="x">&#10060;</td>
+									<td>The dataset is created by ILGA-Europe, in collaboration with partner organizations and legal expert</td>
+									<td class="x">&#10060;</td>
+								</tr>
+								<tr>
+									<th>Who is the owner?</th>
+									<td>The owner is the <em>European Commission</em>, DirectorateGeneral for Communication, “Media monitoring and
+										Eurobarometer” Unit</td>
+									<td>The owner is the <em>European Agency for Fundamental Rights</em></td>
+									<td></td>
+									<td>The owner is LawsAndFamilies database, based in Paris</td>
+								</tr>
+								<tr>
+									<th>Are you sure to not use third party data without the proper authorization and license?</th>
+									<td>The survey methodology does not indicate the use of third-party data</td>
+									<td><i class="fa fa-check"></i></td>
+									<td></td>
+									<td><i class="fa fa-check"></i></td>
+								</tr>
+								<tr>
+									<th>Are the dataset free from third party licenses or patents?</th>
+									<td><i class="fa fa-check"></i></td>
+									<td><i class="fa fa-check"></i></td>
+									<td></td>
+									<td><i class="fa fa-check"></i></td>
+								</tr>
+								<tr>
+									<th>Have you checked if there are some limitations in your national legal system for releasing some kind of datasets with open license?</th>
+									<td>The deataset follows EU regulation</td>
+									<td>The deataset follows EU regulation</td>
+									<td></td>
+									<td>The deataset follows EU regulation</td>
+								</tr>
+							  </table>
 							</div>
 						  </div>
 						</div>
@@ -300,19 +352,118 @@
 						  </h2>
 						  <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
-							  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+								<table>
+									<tr>
+										<th></th>
+										<td><strong>Discrimination in the EU</strong></td>
+										<td><strong>EU LGBTIQ Survey III</strong></td>
+										<td><strong>Rainbow Europe</strong></td>
+										<td><strong>Laws And Families</strong></td>
+									</tr>
+									<tr>
+										<th>Do you release the dataset with an open data license?</th>
+										<td></td><td><i class="fa fa-check"></i></td>
+										<td><i class="fa fa-check"></i></td>
+										<td></td>
+										<td><i class="fa fa-check"></i></td>
+									</tr>
+									<tr>
+										<th>In case of the use of CC0 do you check that you have all the right necessary for this particular kind of license (e.g., jurisdiction)?</th>
+										<td>The European Commission ensures that it holds all the necessary rights to the data and that releasing it under CC0 complies with relevant jurisdictional laws.</td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<th>Do you include the clause: "In any case the dataset can’t be used for re-identifying the person"?</th>
+										<td class="x">&#10060;</td>
+										<td></td>
+										<td class="x">&#10060;</td>
+									</tr>
+									<tr>
+										<th>Do you release the API (in case you have) with an open</th>
+										<td></td>
+										<td>No API is avaliable</td>
+										<td></td>
+										<td>No API is avaliable</td>
+									</tr>
+									<tr>
+										<th>Do you check that the open data/API platform license regime is compliance with your IPR policy?</th>
+										<td>The European Commission ensures that all data and APIs it releases comply with its Intellectual Property Rights (IPR) policies. </td>
+										<td><i class="fa fa-check"></i></td>
+										<td></td>
+										<td>The European Commission ensures that all data and APIs it releases comply with its Intellectual Property Rights (IPR) policies. </td>
+									</tr>
+									<tr>
+										<th>Do you have all the licences related to the open data platform/API software?</th>
+										<td><i class="fa fa-check"></i></td>
+										<td><i class="fa fa-check"></i></td>
+										<td></td>
+										<td></td>
+									</tr>
+								</table>
 							</div>
 						  </div>
 						</div>
 						<div class="accordion-item">
 							<h2 class="accordion-header" id="headingFour">
 							  <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
-								  Privacy issues
+								Limitations on public access
 							  </button>
 							</h2>
 							<div id="collapseFour" class="accordion-collapse collapse show" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
 							  <div class="accordion-body">
-								<strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+								<table>
+									<tr>
+										<th></th>
+										<td><strong>Discrimination in the EU</strong></td>
+										<td><strong>EU LGBTIQ Survey III</strong></td>
+										<td><strong>Rainbow Europe</strong></td>
+										<td><strong>Laws And Families</strong></td>
+									</tr>
+									<tr>
+										<th>Do you check that the dataset concerns your institutional competences, scope and finality?</th>
+										<td>The dataset's scope aligns with the European Commission's communication and research objectives (monitoring of public social and political attitudes in the EU).</td>
+										<td>The dataset is aligned the institution's competences and scope of monitoring fulfillment of fundamental rights in EU.</td>
+										<td></td>
+										<td><i class="fa fa-check"></i></td>
+									</tr>
+									<tr>
+										<th>Do you check if the dataset concerns other public administration competences?</th>
+										<td><i class="fa fa-check"></i></td>
+										<td><i class="fa fa-check"></i></td>
+										<td></td>
+										<td><i class="fa fa-check"></i></td>
+									</tr>
+									<tr>
+										<th>Do you check if there are some limitations connected to the international relations, public security or national defence?</th>
+										<td>The information contained in the dataset does not compromise international relations, public security, or national defense</td>
+										<td>The dataset does not include sensitive or classified information</td>
+										<td></td>
+										<td class="x">&#10060;</td>
+									</tr>
+									<tr>
+										<th>Do you check if there are some limitations concerning the public interest?</th>
+										<td>The European Commission evaluates public interest concerns, ensuring data publication aligns with transparency goals while avoiding misuse or harm. </td>
+										<td class="x">&#10060;</td>
+										<td></td>
+										<td class="x">&#10060;</td>
+									</tr>
+									<tr>
+										<th>Do you check the international law limitations?</th>
+										<td><i class="fa fa-check"></i></td>
+										<td><i class="fa fa-check"></i></td>
+										<td></td>
+										<td><i class="fa fa-check"></i></td>
+									</tr>
+									<tr>
+										<th>Do you check the INSPIRE law limitations for the spatial data?</th>
+										<td><i class="fa fa-check"></i></td>
+										<td><i class="fa fa-check"></i></td>
+										<td></td>
+										<td><i class="fa fa-check"></i></td>
+									</tr>
+								</table>
 							  </div>
 							</div>
 						</div>
@@ -324,6 +475,23 @@
 							</h2>
 							<div id="collapseFive" class="accordion-collapse collapse show" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
 							  <div class="accordion-body">
+								<table>
+									<tr>
+										<th></th>
+										<td><strong>Discrimination in the EU</strong></td>
+										<td><strong>EU LGBTIQ Survey III</strong></td>
+										<td><strong>Rainbow Europe</strong></td>
+										<td><strong>Laws And Families</strong></td>
+									</tr>
+									<tr>
+										<th></th>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+
+								</table>
 								
 							  </div>
 							</div>
