--- a/index.html
+++ b/index.html
@@ -881,22 +881,22 @@
 				<div class="card">
 					<p><strong>Giorgia Umana</strong></p>
 					<p>Database Analysed: Discrimination in the European Union</p>
-					<p></p>
+					<p>Giorgia made significant contributions to dataset research, website visualizations, and the analysis of whether there is a divide in discrimination between Eastern and Western Europe. Her meticulous attention to detail and analytical approach have been instrumental in uncovering critical patterns and insights throughout the project.</p>
 				</div>
 				<div class="card">
 					<p><strong>Valentina Bertelli</strong></p>
 					<p>Database Analysed: EU LGBTIQ Survey III</p>
-					<p></p>
+					<p>Valentina made substantial contributions to the website's design and functionality, ensuring its smooth operation. She also identified and analyzed the EU LGBTIQ Survey III dataset, skillfully integrating and mashing it up with other datasets to enhance the project's depth and comprehensiveness.</p>
 				</div>
 				<div class="card">
 					<p><strong>Alisha Carol Hiscox</strong></p>
 					<p>Database Analysed: Rainbow Europe</p>
-					<p></p>
+					<p>Alisha played a key role in identifying databases that would support our project's research questions. She thoroughly analyzed the Rainbow Europe dataset, which provided critical insights into the stark discrimination divide between Eastern and Western European Union countries.</p>
 				</div>
 				<div class="card">
 					<p><strong>Lukas Firantas</strong></p>
 					<p>Database Analysed: LawsAndFamilies</p>
-					<p></p>
+					<p>Lukas contributed by identifying several useful datasets that highlighted the clear divide between Eastern and Western European Union countries. Additionally, he provided support in the development and functionality of the website as well as helped set out project topic.</p>
 				</div>
 			</div>
 		<p> Together, we are united by a shared mission: to use the power of open data and ethical research to shed light on the
